--- a/app/assets/stylesheets/multiview.scss
+++ b/app/assets/stylesheets/multiview.scss
@@ -78,6 +78,7 @@
   
   .tab {
     background-color: #a4b0b4;
+    width: 18%;
     width: -webkit-calc(20% - 8px);
     width: -o-calc(20% - 8px);
     width: -moz-calc(20% - 8px);
@@ -110,6 +111,7 @@
     a {
       float:left;      
       height: 25px;
+      width: 95%;
       width: -webkit-calc(100% - 9px);
       width: -o-calc(100% - 9px);
       width: -moz-calc(100% - 9px);
